--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -114,7 +114,7 @@
 \authornote{
 
 Correspondence concerning this article should be addressed to Atsuko Tominaga, Quellenstraße 51, 1100 Vienna, Austria. E-mail: Tominaga\_Atsuko@phd.ceu.edu}
-\keywords{teaching, expertise, skill transmission, artistic expression, music\newline\indent Word count: X}
+\keywords{teaching, expertise, skill transmission, artistic expression, music\newline\indent Word count: 5220}
 \usepackage{csquotes}
 \ifxetex
   % Load polyglossia as late as possible: uses bidi with RTL langages (e.g. Hebrew, Arabic)
@@ -153,7 +153,7 @@ Previous research has shown that demonstrators not only adjust their gestures (C
 
 Importantly, in some domains teaching requires not only demonstrating \emph{what} to do, but \emph{how} to perform actions. In artistic contexts, novices need to learn how exactly to perform actions by relying on particular techniques (Sloboda, 2000). For example, when playing a piece of music on the piano, it is not sufficient to press the keys in the correct order, but learners need to be able to implement expressive techniques (Juslin, 2003). This raises the question of whether and how experts modulate their actions during didactic demonstration in artistic contexts, where expressivity is an integral part of what learners need to acquire. Studying action modulations that serve the teaching of artistic techniques is of broader theoretical importance: It can show whether action modulations can be used to selectively highlight subtle aspects of actions that define expert performance.
 
-In the present experiments, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance need to be highlighted to teach a respective technique. We asked whether skilled pianists use sound to communicate didactic intentions. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano).
+In the present study, we employed musical expressive techniques as skills to be taught because multiple properties of the performance (e.g., timing, articulation, loudness) can be modulated at the same time. Specific and subtle aspects of the performance need to be highlighted to teach a respective technique. We asked whether skilled pianists use sound to communicate didactic intentions. Pianists were asked to perform a piece in order to demonstrate to a learner how to implement the notated expressions (teaching condition) and to play the same piece for an audience (performing condition). Two basic expressive techniques in piano performance were used: articulation (legato and staccato) and dynamics (forte and piano).
 
 If experts rely on generic action modulations, it can be expected that they will play more slowly during didactic demonstration, regardless of the kind of expressive techniques to be taught. To the extent that experts use action modulations to support their teaching of specific expressive techniques, they should produce longer legato and shorter staccato when teaching articulation whereas they should produce louder forte and softer piano when teaching dynamics. Furthermore, one could speculate that they might produce modulations specifically at structurally important points that best highlight the technique to be taught. Importantly, they should avoid modulating irrelevant properties of expression, e.g., the smoothness of the sound while teaching dynamics.
 
@@ -180,11 +180,11 @@ One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen
 \hypertarget{procedure}{%
 \subsubsection{2.1.3. Procedure}\label{procedure}}
 
-In order to ensure that participants had sufficient motor skills to perform the piece, we asked them to practise the piece with the non-expressive sheet music (\emph{Figure \ref{fig:stimuli}, A}). Once they could perform the piece without pitch errors twice consecutively within 5 attempts, the experiment started.
+In order to ensure that participants had sufficient motor skills to perform the piece, we asked them to practise the piece with the non-expressive sheet music (\emph{Figure \ref{fig:stimuli}, A}). Once they could perform the piece without pitch errors twice consecutively within 5 attempts, the experiment started. Those who could not meet this requirement were excluded from data analysis (as a result, none of the participants were excluded).
 
-First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt with notated expressions of either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). As soon as they had produced the excerpt with notated expressions without pitch errors twice consecutively, the test trials began.
+First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt with notated expressions of either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). As soon as they had produced the excerpt with a notated expression without pitch errors twice consecutively, the test trials began.
 
-In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with a notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in \emph{\protect\hyperlink{supplemental}{Supplemental Materials}}). Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was counterbalanced across participants. The order of the expressive techniques within each condition was also counterbalanced across participants. A leading metronome (80 beats per minute, 8 beats) indicated the target tempo before each trial.
+In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with a notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in \emph{\protect\hyperlink{supplementary}{Supplemental Materials}}). Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was counterbalanced across participants. The order of the expressive techniques within each condition was also counterbalanced across participants. A leading metronome (80 beats per minute, 8 beats) indicated the target tempo before each trial.
 
 At the end of the experiment, participants filled in a questionnaire asking about their demographic information and experience in piano performance/teaching.
 
@@ -197,7 +197,7 @@ Three dependent variables were computed for data analysis. Interonset intervals 
 
 Data cleaning, preprocessing and statistical analysis were performed in R version 3.6.3. For statistical analysis, only 16th notes with expressive notations were included. Three trials were entirely excluded from data analysis because participants did not follow sheet music or complete performing till the end. Pitch errors were identified by comparing a sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed by using editData package. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.24\%, substituted notes; 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.29\%, substituted notes; 1.17\%). After we removed pitch errors, outliers for IOIs, KOT and KV were defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. Removed outliers were less than 5\% of overall responses for each dependent variable.
 
-We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The ``aov\_car" function in the afex package was used for a repeated-measures ANOVA. For post-hoc comparisons, we used emmeans package.
+We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). A paired-sample \emph{t}-test or a Wilcoxon signed-rank tests (a non-parametric alternative to a paired \emph{t}-test) was performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The ``aov\_car" function in the afex package was used for a repeated-measures ANOVA. For post-hoc comparisons on the estimated marginal means, we used emmeans package.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-1-1} \caption{\label{fig:stimuli}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 16th notes were included.}\label{fig:stim-1}
@@ -241,7 +241,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{kv-transition-points}{%
 \subsubsection{2.3.3. KV Transition Points}\label{kv-transition-points}}
 
-Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano; FtoP, piano to forte; PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated a KV difference for each interval by subtracting the KV value of the current note from that of the following note. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -14.06, \emph{SD} = 7.20, PtoF; \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP; \emph{M} = -11.69, \emph{SD} = 5.97, PtoF; \emph{M} = 20.88, \emph{SD} = 8.67{]} (FtoP; \emph{p} = 0.002, PtoF; \emph{p} \textless{} 0.001).
+Additionally, we conducted an exploratory analysis by focusing on specific points at which each subcomponent changed from one to the other (i.e., forte to piano; FtoP, piano to forte; PtoF). These points could be structurally important in order to make a contrast between forte and piano. We calculated a KV difference for each interval by subtracting the KV value of the current note from that of the following note. Outliers were also removed with the same criteria for other dependent variables and less than 5 \% were excluded from data analysis. A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,30) = 224, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.83) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,30) = 25.74, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.032; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -14.06, \emph{SD} = 7.20, PtoF; \emph{M} = 24.26, \emph{SD} = 9.75{]} than in the performing condition {[}FtoP; \emph{M} = -11.69, \emph{SD} = 5.97, PtoF; \emph{M} = 20.88, \emph{SD} = 8.67{]} (FtoP; \emph{p} = 0.002, PtoF; \emph{p} \textless{} 0.001).
 
 \hypertarget{key-overlap-time-kot-1}{%
 \subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
@@ -251,7 +251,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{discussion}{%
 \subsection{2.4. Discussion}\label{discussion}}
 
-The findings from Experiment 1 indicated that skilled pianists were able to modify their performance for teaching purposes. For IOIs (tempo), we found a small but significant difference only when playing the piece with the notated articulation. This could be due to the leading metronome, which was given prior to each performance. As participants tried to follow the ideal tempo through their performances, it was possible that there was only a tiny difference between the two conditions. Another possibility could be that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) when teaching articulation whereas such relation was irrelevant when teaching dynamics. With regard to KOT (articulation) and KV (dynamics), participants successfully highlight the relevant aspects of the techniques. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques in a simple musical scale.
+The findings from Experiment 1 indicated that skilled pianists were able to modify their performance for teaching purposes. For IOIs (tempo), we found a small but significant difference only when playing the piece with the notated articulation. This could be due to the leading metronome, which was given prior to each performance. As participants tried to follow the ideal tempo through their performances, it was possible that there was only a tiny difference between the two conditions. Another possibility could be that slower performance may be more or only beneficial to highlight the relation between two notes (i.e.~to what extent two notes overlap) when teaching articulation whereas such relation was irrelevant when teaching dynamics. With regard to KOT (articulation) and KV (dynamics), participants successfully highlight the relevant aspects of the techniques. Specifically, they produced shorter staccato when teaching articulation and produced louder forte when teaching dynamics. Moreover, our exploratory analysis demonstrated that participants made a larger contrast in dynamics at transition points where one of two subcomponents moved to the other (i.e., forte to piano or piano to forte). Importantly, participants did not modulate their performance in term of irrelevant aspects of the techniques for teaching purposes (e.g., modulating the smoothness of sound while teaching dynamics). These findings confirmed that participants modulated their performance in systematic and fine-grained ways in order to teach expressive techniques in a simple musical scale.
 
 One of the limitations of Experiment 1 is that we employed a simple musical scale, which was suitable to gain an experimental control. However the stimulus was not a naturalistic piece to implement artistic expressions. In Experiment 2, we chose one piece of music from actual piano pieces and modified it for the purpose of the experiment. We predict that participants will played more slowly regardless of the techniques to be taught or only when teaching articulation based on the finding from Experiment 1. Also, we expect that participants will be able to highlight only the relevant aspects of the techniques to be taught. More precisely, they should be able to produce longer legato and shorter staccato while teaching articulation. When teaching dynamics, they should be able to produce louder forte and softer piano. Given the findings we observed in Experiment 1, participants will make a larger contrast between forte and piano at transition points.
 
@@ -278,7 +278,7 @@ One of the limitations of Experiment 1 is that we employed a simple musical scal
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 1 participants due to insufficient motor skills (1) and an overall deviated tempo (1). Nineteen participants (9 female) were included in data analysis. Most participants were right-handed (left; 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 1 participants due to insufficient motor skills (1) and an overall deviated tempo (1; outside 2 standard deviations from the average tempo across participants). Nineteen participants (9 female) were included in data analysis. Most participants were right-handed (left; 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
@@ -288,12 +288,12 @@ The same apparatus as Experiment 1 was used. We selected Clementi's Sonatina Op.
 \hypertarget{procedure-2}{%
 \subsubsection{3.1.3. Procedure}\label{procedure-2}}
 
-We employed the same procedure as Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., \emph{Figure \ref{fig:stimuli-2}, A}) prior to the experiment. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplemental}{Supplemental Materials}}). Third, participants could choose their preferred tempo from one of the 3 options (100, 110 and 120 beats per minute) as a leading metronome. In order to make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the non-expressive sheet music. As Experiment 1, those who could not perform the piece twice consecutively within 5 attempts were excluded from data analysis. The rest of the procedure was identical to Experiment 1.
+We employed the same procedure as Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., \emph{Figure \ref{fig:stimuli-2}, A}) prior to the experiment. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations (see details in \emph{\protect\hyperlink{supplemental}{Supplemental Materials}}). Third, participants could choose their preferred tempo from one of the 3 options (100, 110 and 120 beats per minute) as a leading metronome. In order to make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the non-expressive sheet music. As Experiment 1, those who could not perform the piece twice consecutively within 5 attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
 
 \hypertarget{design-and-data-analysis-1}{%
 \subsubsection{3.1.4. Design and data analysis}\label{design-and-data-analysis-1}}
 
-Data cleaning, preprocessing and statistical analysis were identical as Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included to calculate dependent variables. IOIs were normalised by their preferred tempo because each participant chose different tempi from the 3 options. Key-overlap Ratio (KOR) was calculated by dividing KOT by the mean IOI of each performance in order to normalise KOT due to a different tempo for each participant. Three trials were entirely excluded from data analysis because participants did not follow sheet music. With the same method as Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). Removed outliers (i.e., responses outside 3 standard deviations from the mean) were less than 5\% of overall responses for each dependent variable.
+Data cleaning, preprocessing and statistical analysis were almost identical as Experiment 1. For statistical analysis, only 8th notes with expressive notations were included. As a result, only one 8th note in the 4th measure without any expression was not included to calculate dependent variables. IOIs were normalised by their preferred tempo because each participant chose different tempi from the 3 options. Key-overlap Ratio (KOR) was calculated by dividing KOT by the mean IOI of each performance in order to normalise KOT due to a different tempo for each participant. Additionally, we include KV difference (i.e., KV difference for each interval) at transition points (i.e., forte to piano or piano to forte) as a dependent variable based on the findings of Experiment 1. Three trials were entirely excluded from data analysis because participants did not follow sheet music. With the same method as Experiment 1, pitch errors were removed manually. For onsets, 3.32\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 0.09\%). For offsets, 5.11\% of the trials contained at least one pitch error (extra notes; 1.66\%, missing notes; 1.57\%, substituted notes; 1.88\%). Removed outliers (i.e., responses outside 3 standard deviations from the mean) were less than 5\% of overall responses for each dependent variable.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/stim-2-1} \caption{\label{fig:stimuli-2}(A)Non-expressive sheet music. (B)Articulation. The curved line (slur) indicates legato and the dots indicate staccato. (C)Dynamics. The symbol `f' denotes forte and the symbol `p' denotes piano. For data analysis, only the 8th notes were included.}\label{fig:stim-2}
@@ -333,12 +333,12 @@ A paired-sample \emph{t}-test showed no significant difference between the teach
 \hypertarget{key-velocity-kv-3}{%
 \subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.7190) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.022; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte and softer piano in the teaching condition {[}Forte; \emph{M} = 82.55, \emph{SD} = 8.57, Piano; \emph{M} = 60.41, \emph{SD} = 3.83{]} than in the performing condition {[}Forte; \emph{M} = 80.71, \emph{SD} = 7.53, Piano; \emph{M} = 62.34, \emph{SD} = 4.93{]} than in the performing condition (Forte; \emph{p} = 0.036, Piano; \emph{p} = 0.028).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (forte vs.~piano) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 126, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.72) and a significant interaction between Condition and Subcomponent-FP (\emph{F}(1,18) = 6.11, \emph{p} = 0.024, \(\eta_G^2\) = 0.022; \emph{Figure \ref{fig:vel-2}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment revealed that participants produced louder forte and softer piano in the teaching condition {[}Forte; \emph{M} = 82.55, \emph{SD} = 8.57, Piano; \emph{M} = 60.41, \emph{SD} = 3.83{]} than in the performing condition {[}Forte; \emph{M} = 80.71, \emph{SD} = 7.53, Piano; \emph{M} = 62.34, \emph{SD} = 4.93{]} than in the performing condition (Forte; \emph{p} = 0.036, Piano; \emph{p} = 0.028).
 
 \hypertarget{kv-transition-points-1}{%
 \subsubsection{3.3.3. KV Transition Points}\label{kv-transition-points-1}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 111, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,18) = 9.77, \emph{p} = 0.006, \(\eta_G^2\) = 0.0641; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.35, \emph{SD} = 8.46, PtoF; \emph{M} = 20.60, \emph{SD} = 9.10{]} than in the performing condition {[}FtoP; \emph{M} = -13.71, \emph{SD} = 7.73, PtoF; \emph{M} = 15.87, \emph{SD} = 7.47{]} (FtoP; \emph{p} = 0.017, PtoF; \emph{p} = 0.003).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-FP (FtoP vs.~PtoF) showed that there was a significant main effect of Subcomponent-FP (\emph{F}(1,18) = 111, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.82) and a significant interaction of Condition and Subcomponent-FP (\emph{F}(1,18) = 9.77, \emph{p} = 0.006, \(\eta_G^2\) = 0.064; \emph{Figure \ref{fig:vel-diff}}). Post-hoc comparisons based on the estimated marginal means with Tukey adjustment showed that there was a larger KV difference when the expressive notation changed from forte to piano and from piano to forte in the teaching condition {[}FtoP; \emph{M} = -17.35, \emph{SD} = 8.46, PtoF; \emph{M} = 20.60, \emph{SD} = 9.10{]} than in the performing condition {[}FtoP; \emph{M} = -13.71, \emph{SD} = 7.73, PtoF; \emph{M} = 15.87, \emph{SD} = 7.47{]} (FtoP; \emph{p} = 0.017, PtoF; \emph{p} = 0.003).
 
 \hypertarget{key-overlap-ratio-kor-1}{%
 \subsubsection{3.3.4. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor-1}}
@@ -348,7 +348,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{discussion-1}{%
 \subsection{3.4. Discussion}\label{discussion-1}}
 
-The results from Experiment 2 demonstrated that we successfully replicated our earlier findings that skilled pianists were able to modulate their performance for teaching purposes. As Experiment 1, we observed slower performance only while teaching the notated articulation. With regard to KOR (articulation), participants highlighted articulation by producing shorter staccato. Again, there was no significant difference in legato between the two conditions as Experiment 1. In term of KV (dynamics), participants produced louder forte and softer piano, which showed a clearer pattern of exaggeration compared to Experiment 1, where only softer piano was observed. Furthermore, we found that participants made a larger contrast between forte and piano bidirectionally at transition points. To sum, Experiment 2 confirmed that participants modified their performance in systematic and fine-grained ways in order to teach expressive techniques in a naturalistic piece of music.
+The results from Experiment 2 demonstrated that we successfully replicated our earlier findings that skilled pianists were able to modulate their performance for teaching purposes. As Experiment 1, we observed slower performance only while teaching the notated articulation. With regard to KOR (articulation), participants highlighted articulation by producing shorter staccato. Again, there was no significant difference in legato between the two conditions as Experiment 1. In term of KV (dynamics), participants produced louder forte and softer piano, which showed a clearer pattern of exaggeration compared to Experiment 1, where only softer piano was observed. Furthermore, we found that participants made a larger contrast between forte and piano bidirectionally at transition points. Importantly, participants did not modulate their performance in term of irrelevant aspects of the techniques for teaching purposes as we found in Experiment 1. To sum, Experiment 2 demonstrated consistent results of systematic and fine-grained ways of didactic performance even in a naturalistic piece of music.
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
@@ -375,7 +375,7 @@ The aim of the study was to investigate how expert pianists could modulate their
 
 Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As we mentioned in Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is actually best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down, reported in research on parent-infant interaction, might be less useful in the context of teaching expressive artistic techniques where timing itself can be used to add an expression to a performance.
 
-Participants exaggerated articulation for teaching purposes by highlighting staccato. The lack of a difference for legato might stem from a ceiling effect. When participants played the piece with dynamics, there was no difference between the two conditions with regard to KOT/KOR, which indicates that participants did not modulate irrelevant properties of the sound. However, participants made a larger contrast between forte and piano for teaching purposes to highlight the transition of dynamics. We expected there would be an overall exaggeration in KV while teaching dynamics and indeed found that participants produced louder forte and softer piano, but only in Experiment 2. The finding of making a larger contrast in dynamics at transition points suggests an effective way to highlight the technique as the loudness is determined relatively. Taken together, these findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
+Participants exaggerated articulation for teaching purposes by highlighting staccato. The lack of a difference for legato might stem from a ceiling effect. When participants played the piece with dynamics, there was no difference between the two conditions with regard to KOT/KOR, which indicates that participants did not modulate irrelevant properties of the sound. Also, participants made a larger contrast between forte and piano for teaching purposes to highlight the transition of dynamics. We expected there would be an overall exaggeration in KV while teaching dynamics and indeed found that participants produced louder forte and softer piano, but only in Experiment 2. The finding of making a larger contrast in dynamics at transition points suggests an effective way to highlight the technique as the loudness is determined relatively. Taken together, these findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
 
 Musicians and music teachers tend to consider expressive skills as a performer's most important skills (Lindström, Juslin, Bresin, \& Williamon, 2003). In the present study, experts focused on the teaching of expressions that were notated. However, expression also has other facets (Juslin, 2003) that are not only piece-related but performer- or context-related. An interesting topic for future research is how experts teach not only expressive techniques as such but convey possibilities of interpretation.
 
@@ -469,15 +469,15 @@ Uther, M., Knoll, M. A., \& Burnham, D. (2007). Do you speak E-NG-L-I-SH? A comp
 \hypertarget{experiment-1-1}{%
 \subsubsection{Experiment 1}\label{experiment-1-1}}
 
-In the teaching condition, participants were shown with the following instruction in front of the monitor (Italic sentences were highlighted with a yellow colour on a black background.); Now, play what you practised as if you were teaching it to students. Students already know how to produce the sequence of the tones and now are trying to \emph{learn how to perform the piece expressively} by listening to your performance. \emph{Do your best as a teacher to produce the piece according to the notation that you just practised}.
+In the teaching condition, participants were shown with the following instruction on a computer monitor (Italic sentences were highlighted with a yellow colour on a black background); Now, play what you practised as if you were teaching it to students. Students already know how to produce the sequence of the tones and now are trying to \emph{learn how to perform the piece expressively} by listening to your performance. \emph{Do your best as a teacher to produce the piece according to the notation that you just practised}.
 
-In the performing condition, participants were displayed with the following instruction in front of the monitor; Now, play what you practised as if you were performing it to an audience. \emph{Do your best as a performer to produce the piece according to the notation that you just practised}.
+In the performing condition, participants were displayed with the following instruction on a computer monitor monitor; Now, play what you practised as if you were performing it to an audience. \emph{Do your best as a performer to produce the piece according to the notation that you just practised}.
 
 \hypertarget{experiment-2-1}{%
 \subsubsection{Experiment 2}\label{experiment-2-1}}
 
 In the teaching condition, we gave participants the exact same instruction as Experiment 1.
 
-In the performing condition, participants were displayed with the following instruction in front of the monitor (Italic sentences were highlighted with a yellow colour on a black background.); Now, play what you practised as if you were performing it to an audience. \emph{Perform the piece expressively with your interpretation}. \emph{Do your best as a performer to produce the piece according to the notation that you just practised}.
+In the performing condition, participants were displayed with the following instruction on a computer monitor; Now, play what you practised as if you were performing it to an audience. \emph{Perform the piece expressively with your interpretation}. \emph{Do your best as a performer to produce the piece according to the notation that you just practised}.
 
 \end{document}
